--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,30 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
+  text-align: center;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin: auto;
+  margin-bottom: 10px;
+
+  height: 100vh;
 }
 
-.App-link {
-  color: #61dafb;
+.Logo-X {
+  font-weight: 200;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@media (min-width: 320px) {
+  .App {
+    width: 90%;
   }
-  to {
-    transform: rotate(360deg);
+}
+@media (min-width: 768px) {
+  .App {
+    width: 75%;
+  }
+}
+@media (min-width: 1024px) {
+  .App {
+    width: 600px;
   }
 }
