--- a/src/sass/_login.scss
+++ b/src/sass/_login.scss
@@ -33,6 +33,8 @@ input {
   background-position: center;
   background-size: cover;
   color: v.$font;
+
+  overflow-y: auto;
 }
 
 .login-user {
@@ -40,8 +42,9 @@ input {
   flex-direction: column;
   backdrop-filter: blur(7px);
   min-height: min-content;
+  min-width: 280px;
   font-family: sans-serif;
-  padding: 75px 10px;
+  padding: 50px 10px;
   border-radius: 10px;
   box-shadow: 2px 2px 5px 3px v.$Bacground, 5px 5px 10px 1px v.$Bacground;
   margin-left: auto;
@@ -63,7 +66,8 @@ input {
   }
   &__close {
     position: absolute;
-    right: 0;
+    right: auto;
+    left: auto;
     top: 0;
     cursor: pointer;
     color: rgba(255, 255, 255, 0.377);
