--- a/src/sass/_login.scss
+++ b/src/sass/_login.scss
@@ -178,12 +178,20 @@ input {
   cursor: pointer;
   border-radius: 15px;
   background-color: v.$Bacground;
+  background-color: transparent;
+  border-bottom: 2px solid red;
+  box-shadow: 1px 1px 8px 1px #fff;
+  border-top: 0px;
   color: v.$font;
   letter-spacing: 1px;
-  font-weight: 100;
-
-  background-color: #13adcf;
-  background-image: linear-gradient(19deg, #02bde7 0%, #ae00ff 100%);
+  font-weight: 700;
+  &:hover {
+    box-shadow: 0px 0px 0px 0px #fff;
+    border-bottom: 0px;
+    border-top: 2px solid red;
+  }
+  //   background-color: #13adcf00;
+  //   background-image: linear-gradient(19deg, #02bde7 0%, #ae00ff 100%);
 }
 
 .way-signUp {
