--- a/src/stylesheets/logIn.css
+++ b/src/stylesheets/logIn.css
@@ -157,11 +157,18 @@ input {
   cursor: pointer;
   border-radius: 15px;
   background-color: #35093c;
+  background-color: transparent;
+  border-bottom: 2px solid red;
+  box-shadow: 1px 1px 8px 1px #fff;
+  border-top: 0px;
   color: #f3f1f2;
   letter-spacing: 1px;
-  font-weight: 100;
-  background-color: #13adcf;
-  background-image: linear-gradient(19deg, #02bde7 0%, #ae00ff 100%);
+  font-weight: 700;
+}
+.btn-submit:hover {
+  box-shadow: 0px 0px 0px 0px #fff;
+  border-bottom: 0px;
+  border-top: 2px solid red;
 }
 
 .way-signUp {
