--- a/src/stylesheets/logIn.css
+++ b/src/stylesheets/logIn.css
@@ -1,4 +1,5 @@
-input {
+.user-email__input,
+.user-password__input {
   outline: none;
   font-family: sans-serif;
   border: 0px;
@@ -13,12 +14,11 @@ input {
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
-  top: auto;
-  bottom: auto;
   z-index: 999999;
   position: absolute;
-  width: 100%;
-  height: 100vh;
+  top: -100vh;
+  left: 0;
+  right: 0;
   background-image: url("https://www.xtrafondos.com/wallpapers/resoluciones/22/auto-en-carretera-con-el-cielo-nocturno-arte-digital_1920x1080_9880.jpg");
   background-position: center;
   background-repeat: no-repeat;
@@ -26,6 +26,12 @@ input {
   background-size: cover;
   color: #f3f1f2;
   overflow-y: auto;
+  transition: top 1s ease-in-out;
+}
+.login__show {
+  bottom: 0;
+  top: 0;
+  transition: top 1s ease-in-out;
 }
 
 .login-user {
@@ -143,10 +149,13 @@ input {
 .remember-user__text {
   font-family: sans-serif;
   margin-left: 5px;
+  user-select: none;
 }
 
 .forgot-password {
   font-family: sans-serif;
+  user-select: none;
+  cursor: pointer;
 }
 
 .btn-submit {
@@ -192,6 +201,7 @@ input {
   font-family: sans-serif;
   color: #fae900;
   cursor: pointer;
+  user-select: none;
 }
 
-/*# sourceMappingURL=logIn.css.map */
+/*# sourceMappingURL=login.css.map */
